sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:21: error: '(' expected but identifier found.
  for t <- n+1 to lgr {
      ^AlgSelectionSort:27: error: illegal start of simple expression
} 
^